--- a/ssd512_eval.ipynb
+++ b/ssd512_eval.ipynb
@@ -27,9 +27,11 @@
     "from tensorflow.keras.models import load_model\n",
     "from math import ceil\n",
     "import numpy as np\n",
+    "import os\n",
     "from matplotlib import pyplot as plt\n",
     "\n",
     "from models.keras_ssd300 import ssd_300\n",
+    "from models.keras_ssd512 import ssd_512\n",
     "from keras_loss_function.keras_ssd_loss import SSDLoss\n",
     "from keras_layers.keras_layer_AnchorBoxes import AnchorBoxes\n",
     "from keras_layers.keras_layer_DecodeDetections import DecodeDetections\n",
@@ -54,24 +56,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "img_height = 300 # Height of the model input images\n",
-    "img_width = 300 # Width of the model input images\n",
+    "img_height = 512 # Height of the model input images\n",
+    "img_width = 512 # Width of the model input images\n",
     "img_channels = 3 # Number of color channels of the model input images\n",
     "mean_color = [123, 117, 104] # The per-channel mean of the images in the dataset. Do not change this value if you're using any of the pre-trained weights.\n",
     "swap_channels = [2, 1, 0] # The color channel order in the original SSD is BGR, so we'll have the model reverse the color channel order of the input images.\n",
     "n_classes = 1 # Number of positive classes, e.g. 20 for Pascal VOC, 80 for MS COCO\n",
     "scales_pascal = [0.1, 0.2, 0.37, 0.54, 0.71, 0.88, 1.05] # The anchor box scaling factors used in the original SSD300 for the Pascal VOC datasets\n",
-    "scales_coco = [0.07, 0.15, 0.33, 0.51, 0.69, 0.87, 1.05] # The anchor box scaling factors used in the original SSD300 for the MS COCO datasets\n",
-    "scales = scales_pascal\n",
+    "scales_coco = [0.07, 0.15, 0.3, 0.45, 0.6, 0.75, 0.9, 1.05] # The anchor box scaling factors used in the original SSD300 for the MS COCO datasets\n",
+    "scales = scales_coco\n",
     "aspect_ratios = [[1.0, 2.0, 0.5],\n",
+    "                 [1.0, 2.0, 0.5, 3.0, 1.0/3.0],\n",
     "                 [1.0, 2.0, 0.5, 3.0, 1.0/3.0],\n",
     "                 [1.0, 2.0, 0.5, 3.0, 1.0/3.0],\n",
     "                 [1.0, 2.0, 0.5, 3.0, 1.0/3.0],\n",
     "                 [1.0, 2.0, 0.5],\n",
     "                 [1.0, 2.0, 0.5]] # The anchor box aspect ratios used in the original SSD300; the order matters\n",
     "two_boxes_for_ar1 = True\n",
-    "steps = [8, 16, 32, 64, 100, 300] # The space between two adjacent anchor box center points for each predictor layer.\n",
-    "offsets = [0.5, 0.5, 0.5, 0.5, 0.5, 0.5] # The offsets of the first anchor box center points from the top and left borders of the image as a fraction of the step size for each predictor layer.\n",
+    "steps = [8, 16, 32, 64, 128, 256, 512] # The space between two adjacent anchor box center points for each predictor layer.\n",
+    "offsets = [0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5] # The offsets of the first anchor box center points from the top and left borders of the image as a fraction of the step size for each predictor layer.\n",
     "clip_boxes = False # Whether or not to clip the anchor boxes to lie entirely within the image boundaries\n",
     "variances = [0.1, 0.1, 0.2, 0.2] # The variances by which the encoded target coordinates are divided as in the original implementation\n",
     "normalize_coords = True"
@@ -80,9 +83,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from tensorflow.keras import backend as K\n",
@@ -107,15 +108,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Set a few configuration parameters.\n",
-    "img_height = 300\n",
-    "img_width = 300\n",
-    "n_classes = 1\n",
+    "img_height = 512\n",
+    "img_width = 512\n",
+    "n_classes = 2\n",
     "model_mode = 'training'"
    ]
   },
@@ -140,9 +139,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# 1: Build the Keras model\n",
@@ -208,13 +205,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# TODO: Set the path to the `.h5` file of the model to be loaded.\n",
-    "model_path = R'path/to/trained/model.h5'\n",
+    "model_path = \"path/to/trained/model.h5\"\n",
     "\n",
     "# We need to create an SSDLoss object in order to pass that to the model loader.\n",
     "ssd_loss = SSDLoss(neg_pos_ratio=3, alpha=1.0)\n",
@@ -234,37 +229,6 @@
     "## 2. Create a data generator for the evaluation dataset\n",
     "\n",
     "Instantiate a `DataGenerator` that will serve the evaluation dataset during the prediction phase."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dataset = DataGenerator()\n",
-    "\n",
-    "# TODO: Set the paths to the dataset here.\n",
-    "Pascal_VOC_dataset_images_dir = '../../datasets/VOCdevkit/VOC2007/JPEGImages/'\n",
-    "Pascal_VOC_dataset_annotations_dir = '../../datasets/VOCdevkit/VOC2007/Annotations/'\n",
-    "Pascal_VOC_dataset_image_set_filename = '../../datasets/VOCdevkit/VOC2007/ImageSets/Main/test.txt'\n",
-    "\n",
-    "# The XML parser needs to now what object class names to look for and in which order to map them to integers.\n",
-    "classes = ['background',\n",
-    "           'aeroplane', 'bicycle', 'bird', 'boat',\n",
-    "           'bottle', 'bus', 'car', 'cat',\n",
-    "           'chair', 'cow', 'diningtable', 'dog',\n",
-    "           'horse', 'motorbike', 'person', 'pottedplant',\n",
-    "           'sheep', 'sofa', 'train', 'tvmonitor']\n",
-    "\n",
-    "dataset.parse_xml(images_dirs=[Pascal_VOC_dataset_images_dir],\n",
-    "                  image_set_filenames=[Pascal_VOC_dataset_image_set_filename],\n",
-    "                  annotations_dirs=[Pascal_VOC_dataset_annotations_dir],\n",
-    "                  classes=classes,\n",
-    "                  include_classes='all',\n",
-    "                  exclude_truncated=False,\n",
-    "                  exclude_difficult=False,\n",
-    "                  ret=False)"
    ]
   },
   {
@@ -371,7 +335,8 @@
     "                   model.get_layer('conv6_2_mbox_conf').output_shape[1:3],\n",
     "                   model.get_layer('conv7_2_mbox_conf').output_shape[1:3],\n",
     "                   model.get_layer('conv8_2_mbox_conf').output_shape[1:3],\n",
-    "                   model.get_layer('conv9_2_mbox_conf').output_shape[1:3]]\n",
+    "                   model.get_layer('conv9_2_mbox_conf').output_shape[1:3],\n",
+    "                   model.get_layer('conv10_2_mbox_conf').output_shape[1:3]]\n",
     "\n",
     "ssd_input_encoder = SSDInputEncoder(img_height=img_height,\n",
     "                                    img_width=img_width,\n",
@@ -449,11 +414,11 @@
     "                    batch_size=8,\n",
     "                    data_generator_mode='resize',\n",
     "                    round_confidences=False,\n",
-    "                    matching_iou_threshold=0.8,\n",
+    "                    matching_iou_threshold=0.9,\n",
     "                    border_pixels='include',\n",
     "                    sorting_algorithm='quicksort',\n",
-    "                    average_precision_mode='sample',\n",
-    "                    num_recall_points=11,\n",
+    "                    average_precision_mode='integrate',\n",
+    "                    num_recall_points=10000,\n",
     "                    ignore_neutral_boxes=False,\n",
     "                    return_precisions=True,\n",
     "                    return_recalls=True,\n",
@@ -464,22 +429,15 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Visualize the results"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "for i in range(1, len(average_precisions)):\n",
-    "    print(\"{:<14}{:<6}{}\".format(classes[i], 'AP', round(average_precisions[i], 3)))\n",
+    "    print(\"{:<14}{:<6}{}\".format(classes[i], 'AP', round(average_precisions[i], 10)))\n",
     "print()\n",
-    "print(\"{:<14}{:<6}{}\".format('','mAP', round(mean_average_precision, 3)))"
+    "print(\"{:<14}{:<6}{}\".format('','mAP', round(mean_average_precision, 10)))"
    ]
   },
   {
@@ -489,7 +447,7 @@
    "outputs": [],
    "source": [
     "for i in range(1, len(average_recalls)):\n",
-    "    print(\"{:<14}{:<6}{}\".format(classes[i], 'AP', round(average_recalls[i], 3)))\n",
+    "    print(\"{:<14}{:<6}{}\".format(classes[i], 'AP', round(average_recalls[i], 10)))\n",
     "print()"
    ]
   },
@@ -519,7 +477,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Evaluation for multiple IoU"
+    "## Evaluation for multiple IoU"
    ]
   },
   {
@@ -533,16 +491,18 @@
     "f1scores = []\n",
     "for i in range(5,10):\n",
     "    evaluator = Evaluator(model=model,\n",
-    "                        n_classes=n_classes,\n",
+    "                        n_classes=1,\n",
     "                        data_generator=val_dataset,\n",
     "                        model_mode=model_mode)\n",
     "\n",
     "    results = evaluator(img_height=img_height,\n",
     "                        img_width=img_width,\n",
-    "                        batch_size=8,\n",
+    "                        batch_size=128,\n",
     "                        data_generator_mode='resize',\n",
     "                        round_confidences=False,\n",
     "                        matching_iou_threshold=i/10,\n",
+    "                        decoding_confidence_thresh=0.5,\n",
+    "                        decoding_iou_threshold=0.5,\n",
     "                        border_pixels='include',\n",
     "                        sorting_algorithm='quicksort',\n",
     "                        average_precision_mode='integrate',\n",
@@ -558,27 +518,6 @@
     "    precision.append(average_precisions)\n",
     "    recall.append(average_recalls)\n",
     "    f1scores.append(f1score)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Visualize the results"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for i in range(5):\n",
-    "    print('IoU : ', (i+5)/10, '   ')\n",
-    "    print(\"{:<14}{:<6}{}\".format('Precision','mAP', np.round(np.average(precision[i][1:])*100, 1)))\n",
-    "    print(\"{:<14}{:<6}{}\".format('Recall','mAP', np.round(np.average(recall[i][1:])*100, 1)))\n",
-    "    print(\"{:<14}{:<6}{}\".format('F1 Score','mAP', np.round(np.average(f1scores[i])*100, 1)))\n",
-    "    print('')"
    ]
   },
   {
@@ -599,7 +538,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Evaluation for multiple IoU with 2 classes"
+    "## Evaluation for multiple IoU for model with 2 classes"
    ]
   },
   {
@@ -614,7 +553,7 @@
     "for i in range(5,10):\n",
     "    f1score = []\n",
     "    evaluator = Evaluator(model=model,\n",
-    "                        n_classes=n_classes,\n",
+    "                        n_classes=2,\n",
     "                        data_generator=val_dataset,\n",
     "                        model_mode=model_mode)\n",
     "\n",
@@ -643,13 +582,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Visualize the results"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -664,23 +596,107 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Evaluation for multiple model with multiple IoU"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import os\n",
+    "from os import listdir\n",
+    "from os.path import isfile, join"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "callback_path = 'path/'\n",
+    "models_list = [f for f in listdir(callback_path) if isfile(join(callback_path, f))]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for file in models_list:\n",
+    "    if not file.endswith(\".h5\"):\n",
+    "        models_list.remove(file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "compteur = 0\n",
+    "with open(os.path.join(\"paht/\", \"resultats.txt\"), \"w+\") as file_writer:\n",
+    "    for models in new_models_list:\n",
+    "        compteur += 1\n",
+    "        print(compteur)\n",
+    "        # We need to create an SSDLoss object in order to pass that to the model loader.\n",
+    "        ssd_loss = SSDLoss(neg_pos_ratio=3, alpha=1.0)\n",
+    "\n",
+    "        K.clear_session() # Clear previous models from memory.\n",
+    "\n",
+    "        model = load_model('paht/' + models, custom_objects={'AnchorBoxes': AnchorBoxes,\n",
+    "                                                       'L2Normalization': L2Normalization,\n",
+    "                                                       'DecodeDetections': DecodeDetections,\n",
+    "                                                       'compute_loss': ssd_loss.compute_loss})\n",
+    "\n",
+    "        precision = []\n",
+    "        recall = []\n",
+    "        f1scores = []\n",
+    "        for i in range(5,10):\n",
+    "            evaluator = Evaluator(model=model,\n",
+    "                        n_classes=1,\n",
+    "                        data_generator=val_dataset,\n",
+    "                        model_mode=model_mode)\n",
+    "\n",
+    "            results = evaluator(img_height=img_height,\n",
+    "                                img_width=img_width,\n",
+    "                                batch_size=128,\n",
+    "                                data_generator_mode='resize',\n",
+    "                                round_confidences=False,\n",
+    "                                matching_iou_threshold=i/10,\n",
+    "                                border_pixels='include',\n",
+    "                                sorting_algorithm='quicksort',\n",
+    "                                average_precision_mode='integrate',\n",
+    "                                num_recall_points=1000,\n",
+    "                                ignore_neutral_boxes=False,\n",
+    "                                return_precisions=True,\n",
+    "                                return_recalls=True,\n",
+    "                                return_average_precisions=True,\n",
+    "                                verbose=True)\n",
+    "\n",
+    "            mean_average_precision, average_recalls, average_precisions, precisions, recalls = results\n",
+    "            f1score = 2*(average_precisions[1]*average_recalls[1])/(average_precisions[1]+average_recalls[1])\n",
+    "            precision.append(average_precisions)\n",
+    "            recall.append(average_recalls)\n",
+    "            f1scores.append(f1score)\n",
+    "\n",
+    "        file_writer.write(\"Model : %s\\n\" % models)\n",
+    "        for i in range(5):\n",
+    "            file_writer.write(\"IuO : %f  \" % ((i+5)/10))\n",
+    "            file_writer.write(\"F1 Score : %f\\n\" % f1scores[i])"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 4. Advanced use\n",
-    "\n",
-    "`Evaluator` objects maintain copies of all relevant intermediate results like predictions, precisions and recalls, etc., so in case you want to experiment with different parameters, e.g. different IoU overlaps, there is no need to compute the predictions all over again every time you make a change to a parameter. Instead, you can only update the computation from the point that is affected onwards.\n",
-    "\n",
-    "The evaluator's `__call__()` method is just a convenience wrapper that executes its other methods in the correct order. You could just call any of these other methods individually as shown below (but you have to make sure to call them in the correct order).\n",
-    "\n",
-    "Note that the example below uses the same evaluator object as above. Say you wanted to compute the Pascal VOC post-2010 'integrate' version of the average precisions instead of the pre-2010 version computed above. The evaluator object still has an internal copy of all the predictions, and since computing the predictions makes up the vast majority of the overall computation time and since the predictions aren't affected by changing the average precision computation mode, we skip computing the predictions again and instead only compute the steps that come after the prediction phase of the evaluation. We could even skip the matching part, since it isn't affected by changing the average precision mode either. In fact, we would only have to call `compute_average_precisions()` `compute_mean_average_precision()` again, but for the sake of illustration we'll re-do the other computations, too."
+    "Get the best model"
    ]
   },
   {
@@ -689,25 +705,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "evaluator.get_num_gt_per_class(ignore_neutral_boxes=True,\n",
-    "                               verbose=False,\n",
-    "                               ret=False)\n",
-    "\n",
-    "evaluator.match_predictions(ignore_neutral_boxes=True,\n",
-    "                            matching_iou_threshold=0.5,\n",
-    "                            border_pixels='include',\n",
-    "                            sorting_algorithm='quicksort',\n",
-    "                            verbose=True,\n",
-    "                            ret=False)\n",
-    "\n",
-    "precisions, recalls = evaluator.compute_precision_recall(verbose=True, ret=True)\n",
-    "\n",
-    "average_precisions = evaluator.compute_average_precisions(mode='integrate',\n",
-    "                                                          num_recall_points=11,\n",
-    "                                                          verbose=True,\n",
-    "                                                          ret=True)\n",
-    "\n",
-    "mean_average_precision = evaluator.compute_mean_average_precision(ret=True)"
+    "with open(os.path.join(R\"path/\", \"resultats.txt\"), \"r\") as f:\n",
+    "    liste = []\n",
+    "    lines = f.readlines()\n",
+    "    for i in range(4, len(lines), 6):\n",
+    "        txt = lines[i].split()\n",
+    "        liste.append(txt[-1])\n"
    ]
   },
   {
@@ -716,18 +719,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for i in range(1, len(average_precisions)):\n",
-    "    print(\"{:<14}{:<6}{}\".format(classes[i], 'AP', round(average_precisions[i], 3)))\n",
-    "print()\n",
-    "print(\"{:<14}{:<6}{}\".format('','mAP', round(mean_average_precision, 3)))"
+    "n = np.array(liste)\n",
+    "print(f'Max index is : {np.argmax(n)}')"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "tensorflow",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "tensorflow"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -739,7 +740,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
