--- a/ssd512_evaluation.ipynb
+++ b/ssd512_evaluation.ipynb
@@ -30,6 +30,7 @@
     "from matplotlib import pyplot as plt\n",
     "\n",
     "from models.keras_ssd300 import ssd_300\n",
+    "from models.keras_ssd512 import ssd_512\n",
     "from keras_loss_function.keras_ssd_loss import SSDLoss\n",
     "from keras_layers.keras_layer_AnchorBoxes import AnchorBoxes\n",
     "from keras_layers.keras_layer_DecodeDetections import DecodeDetections\n",
@@ -54,24 +55,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "img_height = 300 # Height of the model input images\n",
-    "img_width = 300 # Width of the model input images\n",
+    "img_height = 512 # Height of the model input images\n",
+    "img_width = 512 # Width of the model input images\n",
     "img_channels = 3 # Number of color channels of the model input images\n",
     "mean_color = [123, 117, 104] # The per-channel mean of the images in the dataset. Do not change this value if you're using any of the pre-trained weights.\n",
     "swap_channels = [2, 1, 0] # The color channel order in the original SSD is BGR, so we'll have the model reverse the color channel order of the input images.\n",
     "n_classes = 1 # Number of positive classes, e.g. 20 for Pascal VOC, 80 for MS COCO\n",
     "scales_pascal = [0.1, 0.2, 0.37, 0.54, 0.71, 0.88, 1.05] # The anchor box scaling factors used in the original SSD300 for the Pascal VOC datasets\n",
-    "scales_coco = [0.07, 0.15, 0.33, 0.51, 0.69, 0.87, 1.05] # The anchor box scaling factors used in the original SSD300 for the MS COCO datasets\n",
-    "scales = scales_pascal\n",
+    "scales_coco = [0.07, 0.15, 0.3, 0.45, 0.6, 0.75, 0.9, 1.05] # The anchor box scaling factors used in the original SSD300 for the MS COCO datasets\n",
+    "scales = scales_coco\n",
     "aspect_ratios = [[1.0, 2.0, 0.5],\n",
+    "                 [1.0, 2.0, 0.5, 3.0, 1.0/3.0],\n",
     "                 [1.0, 2.0, 0.5, 3.0, 1.0/3.0],\n",
     "                 [1.0, 2.0, 0.5, 3.0, 1.0/3.0],\n",
     "                 [1.0, 2.0, 0.5, 3.0, 1.0/3.0],\n",
     "                 [1.0, 2.0, 0.5],\n",
     "                 [1.0, 2.0, 0.5]] # The anchor box aspect ratios used in the original SSD300; the order matters\n",
     "two_boxes_for_ar1 = True\n",
-    "steps = [8, 16, 32, 64, 100, 300] # The space between two adjacent anchor box center points for each predictor layer.\n",
-    "offsets = [0.5, 0.5, 0.5, 0.5, 0.5, 0.5] # The offsets of the first anchor box center points from the top and left borders of the image as a fraction of the step size for each predictor layer.\n",
+    "steps = [8, 16, 32, 64, 128, 256, 512] # The space between two adjacent anchor box center points for each predictor layer.\n",
+    "offsets = [0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5] # The offsets of the first anchor box center points from the top and left borders of the image as a fraction of the step size for each predictor layer.\n",
     "clip_boxes = False # Whether or not to clip the anchor boxes to lie entirely within the image boundaries\n",
     "variances = [0.1, 0.1, 0.2, 0.2] # The variances by which the encoded target coordinates are divided as in the original implementation\n",
     "normalize_coords = True"
@@ -113,8 +115,8 @@
    "outputs": [],
    "source": [
     "# Set a few configuration parameters.\n",
-    "img_height = 300\n",
-    "img_width = 300\n",
+    "img_height = 512\n",
+    "img_width = 512\n",
     "n_classes = 1\n",
     "model_mode = 'training'"
    ]
@@ -242,37 +244,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset = DataGenerator()\n",
-    "\n",
-    "# TODO: Set the paths to the dataset here.\n",
-    "Pascal_VOC_dataset_images_dir = '../../datasets/VOCdevkit/VOC2007/JPEGImages/'\n",
-    "Pascal_VOC_dataset_annotations_dir = '../../datasets/VOCdevkit/VOC2007/Annotations/'\n",
-    "Pascal_VOC_dataset_image_set_filename = '../../datasets/VOCdevkit/VOC2007/ImageSets/Main/test.txt'\n",
-    "\n",
-    "# The XML parser needs to now what object class names to look for and in which order to map them to integers.\n",
-    "classes = ['background',\n",
-    "           'aeroplane', 'bicycle', 'bird', 'boat',\n",
-    "           'bottle', 'bus', 'car', 'cat',\n",
-    "           'chair', 'cow', 'diningtable', 'dog',\n",
-    "           'horse', 'motorbike', 'person', 'pottedplant',\n",
-    "           'sheep', 'sofa', 'train', 'tvmonitor']\n",
-    "\n",
-    "dataset.parse_xml(images_dirs=[Pascal_VOC_dataset_images_dir],\n",
-    "                  image_set_filenames=[Pascal_VOC_dataset_image_set_filename],\n",
-    "                  annotations_dirs=[Pascal_VOC_dataset_annotations_dir],\n",
-    "                  classes=classes,\n",
-    "                  include_classes='all',\n",
-    "                  exclude_truncated=False,\n",
-    "                  exclude_difficult=False,\n",
-    "                  ret=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# TODO: Set the paths to your dataset here.\n",
     "\n",
     "# Images\n",
@@ -371,7 +342,8 @@
     "                   model.get_layer('conv6_2_mbox_conf').output_shape[1:3],\n",
     "                   model.get_layer('conv7_2_mbox_conf').output_shape[1:3],\n",
     "                   model.get_layer('conv8_2_mbox_conf').output_shape[1:3],\n",
-    "                   model.get_layer('conv9_2_mbox_conf').output_shape[1:3]]\n",
+    "                   model.get_layer('conv9_2_mbox_conf').output_shape[1:3],\n",
+    "                   model.get_layer('conv10_2_mbox_conf').output_shape[1:3]]\n",
     "\n",
     "ssd_input_encoder = SSDInputEncoder(img_height=img_height,\n",
     "                                    img_width=img_width,\n",
@@ -449,11 +421,11 @@
     "                    batch_size=8,\n",
     "                    data_generator_mode='resize',\n",
     "                    round_confidences=False,\n",
-    "                    matching_iou_threshold=0.8,\n",
+    "                    matching_iou_threshold=0.9,\n",
     "                    border_pixels='include',\n",
     "                    sorting_algorithm='quicksort',\n",
-    "                    average_precision_mode='sample',\n",
-    "                    num_recall_points=11,\n",
+    "                    average_precision_mode='integrate',\n",
+    "                    num_recall_points=10000,\n",
     "                    ignore_neutral_boxes=False,\n",
     "                    return_precisions=True,\n",
     "                    return_recalls=True,\n",
@@ -477,9 +449,9 @@
    "outputs": [],
    "source": [
     "for i in range(1, len(average_precisions)):\n",
-    "    print(\"{:<14}{:<6}{}\".format(classes[i], 'AP', round(average_precisions[i], 3)))\n",
+    "    print(\"{:<14}{:<6}{}\".format(classes[i], 'AP', round(average_precisions[i], 10)))\n",
     "print()\n",
-    "print(\"{:<14}{:<6}{}\".format('','mAP', round(mean_average_precision, 3)))"
+    "print(\"{:<14}{:<6}{}\".format('','mAP', round(mean_average_precision, 10)))"
    ]
   },
   {
@@ -489,7 +461,7 @@
    "outputs": [],
    "source": [
     "for i in range(1, len(average_recalls)):\n",
-    "    print(\"{:<14}{:<6}{}\".format(classes[i], 'AP', round(average_recalls[i], 3)))\n",
+    "    print(\"{:<14}{:<6}{}\".format(classes[i], 'AP', round(average_recalls[i], 10)))\n",
     "print()"
    ]
   },
@@ -533,7 +505,7 @@
     "f1scores = []\n",
     "for i in range(5,10):\n",
     "    evaluator = Evaluator(model=model,\n",
-    "                        n_classes=n_classes,\n",
+    "                        n_classes=1,\n",
     "                        data_generator=val_dataset,\n",
     "                        model_mode=model_mode)\n",
     "\n",
@@ -614,7 +586,7 @@
     "for i in range(5,10):\n",
     "    f1score = []\n",
     "    evaluator = Evaluator(model=model,\n",
-    "                        n_classes=n_classes,\n",
+    "                        n_classes=2,\n",
     "                        data_generator=val_dataset,\n",
     "                        model_mode=model_mode)\n",
     "\n",
@@ -643,10 +615,17 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "### Visualize the results"
+    "for i in range(5):\n",
+    "    print('IoU : ', (i+5)/10, '   ')\n",
+    "    print(\"{:<14}{:<6}{}\".format('Precision','mAP', np.round(np.average(precision[i][1:])*100, 1)))\n",
+    "    print(\"{:<14}{:<6}{}\".format('Recall','mAP', np.round(np.average(recall[i][1:])*100, 1)))\n",
+    "    print(\"{:<14}{:<6}{}\".format('F1 Score','mAP', np.round(np.average(f1scores[i])*100, 1)))\n",
+    "    print('')"
    ]
   },
   {
@@ -662,13 +641,6 @@
     "    print(\"{:<14}{:<6}{}\".format('F1 Score','mAP', np.average(np.round(f1scores[i][1:], 3))))\n",
     "    print('')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -725,9 +697,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "tensorflow",
+   "display_name": "tf",
    "language": "python",
-   "name": "tensorflow"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -739,7 +711,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.15"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "78ddfc3686b8b7161f2836984651df038ec9a0366954334fc42499f59ad2b3c8"
+   }
   }
  },
  "nbformat": 4,
