--- a/ssd512_training.ipynb
+++ b/ssd512_training.ipynb
@@ -37,9 +37,10 @@
     "from math import ceil\n",
     "import numpy as np\n",
     "from matplotlib import pyplot as plt\n",
-    "import cv2\n",
+    "import os\n",
     "\n",
     "from models.keras_ssd300 import ssd_300\n",
+    "from models.keras_ssd512 import ssd_512\n",
     "from keras_loss_function.keras_ssd_loss import SSDLoss\n",
     "from keras_layers.keras_layer_AnchorBoxes import AnchorBoxes\n",
     "from keras_layers.keras_layer_DecodeDetections import DecodeDetections\n",
@@ -56,6 +57,23 @@
     "from data_generator.object_detection_2d_misc_utils import apply_inverse_transforms\n",
     "\n",
     "%matplotlib inline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset = 'datatest'\n",
+    "data_creation = False\n",
+    "transfer_learning = 'VGG_coco_SSD_512x512_iter_360000_subsampled_3_classes.h5'\n",
+    "optimizer = 'adam'\n",
+    "initial_epoch = 0\n",
+    "final_epoch = 100\n",
+    "steps_per_epoch = 100\n",
+    "batch_size = 64\n",
+    "learning_scheduler = '80 -> 0.001, 100 -> 0.0001, 0.00001'"
    ]
   },
   {
@@ -86,44 +104,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "img_height = 300 # Height of the model input images\n",
-    "img_width = 300 # Width of the model input images\n",
+    "img_height = 512 # Height of the model input images\n",
+    "img_width = 512 # Width of the model input images\n",
     "img_channels = 3 # Number of color channels of the model input images\n",
     "mean_color = [123, 117, 104] # The per-channel mean of the images in the dataset. Do not change this value if you're using any of the pre-trained weights.\n",
     "swap_channels = [2, 1, 0] # The color channel order in the original SSD is BGR, so we'll have the model reverse the color channel order of the input images.\n",
-    "n_classes = 2 # Number of positive classes, e.g. 20 for Pascal VOC, 80 for MS COCO\n",
+    "n_classes = 1 # Number of positive classes, e.g. 20 for Pascal VOC, 80 for MS COCO\n",
     "scales_pascal = [0.1, 0.2, 0.37, 0.54, 0.71, 0.88, 1.05] # The anchor box scaling factors used in the original SSD300 for the Pascal VOC datasets\n",
-    "scales_coco = [0.07, 0.15, 0.33, 0.51, 0.69, 0.87, 1.05] # The anchor box scaling factors used in the original SSD300 for the MS COCO datasets\n",
-    "scales = scales_pascal\n",
+    "scales_coco = [0.07, 0.15, 0.3, 0.45, 0.6, 0.75, 0.9, 1.05] # The anchor box scaling factors used in the original SSD300 for the MS COCO datasets\n",
+    "scales = scales_coco\n",
     "aspect_ratios = [[1.0, 2.0, 0.5],\n",
+    "                 [1.0, 2.0, 0.5, 3.0, 1.0/3.0],\n",
     "                 [1.0, 2.0, 0.5, 3.0, 1.0/3.0],\n",
     "                 [1.0, 2.0, 0.5, 3.0, 1.0/3.0],\n",
     "                 [1.0, 2.0, 0.5, 3.0, 1.0/3.0],\n",
     "                 [1.0, 2.0, 0.5],\n",
     "                 [1.0, 2.0, 0.5]] # The anchor box aspect ratios used in the original SSD300; the order matters\n",
     "two_boxes_for_ar1 = True\n",
-    "steps = [8, 16, 32, 64, 100, 300] # The space between two adjacent anchor box center points for each predictor layer.\n",
-    "offsets = [0.5, 0.5, 0.5, 0.5, 0.5, 0.5] # The offsets of the first anchor box center points from the top and left borders of the image as a fraction of the step size for each predictor layer.\n",
+    "steps = [8, 16, 32, 64, 128, 256, 512] # The space between two adjacent anchor box center points for each predictor layer.\n",
+    "offsets = [0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5] # The offsets of the first anchor box center points from the top and left borders of the image as a fraction of the step size for each predictor layer.\n",
     "clip_boxes = False # Whether or not to clip the anchor boxes to lie entirely within the image boundaries\n",
     "variances = [0.1, 0.1, 0.2, 0.2] # The variances by which the encoded target coordinates are divided as in the original implementation\n",
     "normalize_coords = True"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dataset = 'data_final'\n",
-    "data_creation = False\n",
-    "transfer_learning = 'VGG_ILSVRC_16_layers_fc_reduced.h5'\n",
-    "optimizer = 'adam'\n",
-    "initial_epoch = 0\n",
-    "final_epoch = 1\n",
-    "steps_per_epoch = 10\n",
-    "batch_size = 32\n",
-    "learning_scheduler = '80 -> 0.001, 100 -> 0.0001, 0.00001'"
    ]
   },
   {
@@ -165,11 +167,11 @@
     "\n",
     "K.clear_session() # Clear previous models from memory.\n",
     "\n",
-    "model = ssd_300(image_size=(img_height, img_width, img_channels),\n",
+    "model = ssd_512(image_size=(img_height, img_width, img_channels),\n",
     "                n_classes=n_classes,\n",
     "                mode='training',\n",
     "                l2_regularization=0.0005,\n",
-    "                scales=scales,\n",
+    "                scales = scales,\n",
     "                aspect_ratios_per_layer=aspect_ratios,\n",
     "                two_boxes_for_ar1=two_boxes_for_ar1,\n",
     "                steps=steps,\n",
@@ -183,7 +185,7 @@
     "# 2: Load some weights into the model.\n",
     "\n",
     "# TODO: Set the path to the weights you want to load.\n",
-    "weights_path = 'path/to/' + transfer_learning\n",
+    "weights_path = '/workdir/data/trained_weights/' + transfer_learning\n",
     "\n",
     "model.load_weights(weights_path, by_name=True)\n",
     "\n",
@@ -196,7 +198,7 @@
     "\n",
     "ssd_loss = SSDLoss(neg_pos_ratio=3, alpha=1.0)\n",
     "\n",
-    "model.compile(optimizer=adam, loss=ssd_loss.compute_loss, run_eagerly = True)"
+    "model.compile(optimizer=adam, loss=ssd_loss.compute_loss)"
    ]
   },
   {
@@ -339,7 +341,7 @@
    "source": [
     "# 3: Set the batch size.\n",
     "\n",
-    "#batch_size = 32 # Change the batch size if you like, or if you run into GPU memory issues.\n",
+    "#batch_size = 64 # Change the batch size if you like, or if you run into GPU memory issues.\n",
     "\n",
     "# 4: Set the image transformations for pre-processing and data augmentation options.\n",
     "\n",
@@ -347,7 +349,6 @@
     "ssd_data_augmentation = SSDDataAugmentation(img_height=img_height,\n",
     "                                            img_width=img_width,\n",
     "                                            background=mean_color)\n",
-    "\n",
     "\n",
     "# For the validation generator:\n",
     "convert_to_3_channels = ConvertTo3Channels()\n",
@@ -361,7 +362,8 @@
     "                   model.get_layer('conv6_2_mbox_conf').output_shape[1:3],\n",
     "                   model.get_layer('conv7_2_mbox_conf').output_shape[1:3],\n",
     "                   model.get_layer('conv8_2_mbox_conf').output_shape[1:3],\n",
-    "                   model.get_layer('conv9_2_mbox_conf').output_shape[1:3]]\n",
+    "                   model.get_layer('conv9_2_mbox_conf').output_shape[1:3],\n",
+    "                   model.get_layer('conv10_2_mbox_conf').output_shape[1:3]]\n",
     "\n",
     "ssd_input_encoder = SSDInputEncoder(img_height=img_height,\n",
     "                                    img_width=img_width,\n",
@@ -444,13 +446,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Save the parameters in a text file"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -466,12 +461,12 @@
    "outputs": [],
    "source": [
     "with open(os.path.join(callback_path, \"param.txt\"), \"w+\") as file_writer:\n",
-    "    file_writer.write(\"dataset : %s\\n\" % 'dataset')\n",
-    "    file_writer.write(\"data creation : %s\\n\" % 'data_creation')\n",
-    "    file_writer.write(\"transfer learning : %s\\n\" % 'transfer_learning')\n",
-    "    file_writer.write(\"optimizer : %s\\n\" % 'optimizer')\n",
+    "    file_writer.write(\"dataset : %s\\n\" % dataset)\n",
+    "    file_writer.write(\"data creation : %s\\n\" % data_creation)\n",
+    "    file_writer.write(\"transfer learning : %s\\n\" % transfer_learning)\n",
+    "    file_writer.write(\"optimizer : %s\\n\" % optimizer)\n",
     "    file_writer.write(\"batch size : %d\\n\" % batch_size)\n",
-    "    file_writer.write(\"learning scheduler : %s\\n\" % 'learning_scheduler')\n",
+    "    file_writer.write(\"learning scheduler : %s\\n\" % learning_scheduler)\n",
     "    file_writer.write(\"steps per epoch : %s\\n\" % steps_per_epoch)"
    ]
   },
@@ -493,7 +488,7 @@
     "                                   save_freq='epoch')\n",
     "#model_checkpoint.best = \n",
     "\n",
-    "csv_logger = CSVLogger(filename=callback_path + '\\\\' +'ssd300_pascal_07+12_training_log.csv',\n",
+    "csv_logger = CSVLogger(filename=callback_path + '\\\\' + 'ssd300_pascal_07+12_training_log.csv',\n",
     "                       separator=',',\n",
     "                       append=True)\n",
     "\n",
@@ -530,13 +525,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "# If you're resuming a previous training, set `initial_epoch` and `final_epoch` accordingly.\n",
-    "# initial_epoch   = 0\n",
-    "# final_epoch     = 1\n",
-    "# steps_per_epoch = 10\n",
+    "#initial_epoch   = 0\n",
+    "#final_epoch     = 5\n",
+    "#steps_per_epoch = 10\n",
     "\n",
     "history = model.fit(train_generator,\n",
     "                              steps_per_epoch=steps_per_epoch,\n",
@@ -588,7 +585,7 @@
    "source": [
     "# 1: Set the generator for the predictions.\n",
     "\n",
-    "predict_generator = val_dataset.generate(batch_size=32,\n",
+    "predict_generator = val_dataset.generate(batch_size=16,\n",
     "                                         shuffle=True,\n",
     "                                         transformations=[convert_to_3_channels,\n",
     "                                                          resize],\n",
@@ -691,7 +688,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "# 5: Draw the predicted boxes onto the image\n",
@@ -704,6 +703,8 @@
     "           'chair', 'cow', 'diningtable', 'dog',\n",
     "           'horse', 'motorbike', 'person', 'pottedplant',\n",
     "           'sheep', 'sofa', 'train', 'tvmonitor']\n",
+    "nb_reel = 0\n",
+    "nb_pred = 0\n",
     "\n",
     "#i = 10\n",
     "for i in range(0,32):\n",
@@ -720,6 +721,7 @@
     "      label = '{}'.format(classes[int(box[0])])\n",
     "      current_axis.add_patch(plt.Rectangle((xmin, ymin), xmax-xmin, ymax-ymin, color='green', fill=False, linewidth=2))  \n",
     "      current_axis.text(xmin, ymin, label, size='x-large', color='white', bbox={'facecolor':'green', 'alpha':1.0})\n",
+    "      nb_reel += 1\n",
     "  label = \"Label original : \"+ label\n",
     "  plt.title(label)\n",
     "  #print(\"Label original :\", label)\n",
@@ -734,6 +736,7 @@
     "      label = '{}: {:.2f}'.format(classes[int(box[0])], box[1])\n",
     "      current_axis.add_patch(plt.Rectangle((xmin, ymin), xmax-xmin, ymax-ymin, color=color, fill=False, linewidth=2))  \n",
     "      current_axis.text(xmin, ymin, label, size='x-large', color='white', bbox={'facecolor':color, 'alpha':1.0})\n",
+    "      nb_pred += 1\n",
     "      LABEL += label + \", \"\n",
     "      plt.xlabel(LABEL)\n",
     "      #print(\"Label prédit :\", label)"
@@ -742,21 +745,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "d8d2843078936055482f322f59f6556f9be76f4c2bdebe10db05c928f1d00891"
-  },
   "kernelspec": {
-   "display_name": "tensorflow",
+   "display_name": "tf",
    "language": "python",
-   "name": "tensorflow"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -768,7 +766,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.15 (main, Nov 24 2022, 14:39:17) [MSC v.1916 64 bit (AMD64)]"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "78ddfc3686b8b7161f2836984651df038ec9a0366954334fc42499f59ad2b3c8"
+   }
   },
   "widgets": {
    "state": {},
